# iphone-bridge

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  dashboard.py  main.py
app/imessage/: __init__.py  mock.py  models.py  sender.py  status_tracker.py  watcher.py
app/services/: __init__.py  queue.py
app/webhooks/: __init__.py  client.py  schemas.py
docs/: REMOTE_ACCESS.md
management/: __init__.py  auth.py  config.py  main.py  tunnel.py
management/routes/: __init__.py  config.py  control.py  health.py  logs.py  services.py  update.py
scripts/: auto-update.sh  bootstrap.sh  bridge-ctl  com.nightline.iphone-bridge-updater.plist  com.nightline.iphone-bridge.plist  com.nightline.management-agent.plist  install.sh  setup-tunnel.sh  uninstall.sh
